# MyOJJudgeServer

./: .gitignore  CMakeLists.txt  README.md
config/: judge_server.conf
source/: CMakeLists.txt  check_result.c  compile.c  judge.c  limit.c  main.c  result.c  rules.h  server.c  server.h  sys_info.c  sys_info.h
source/rules/: c_cpp.c
